# blocks

./: .gitmodules  CMakeLists.txt  setup.py
depend/glad/include/glad/: glad.h
depend/glad/src/: glad.c
src/: main.cpp
src/entities/: camera.cpp  camera.h  entity.h
src/graphics/: shader.cpp  shader.h  texture.cpp  texture.h  texture_array.cpp  texture_array.h  vertex_array.cpp  vertex_array.h
src/server/: client.cpp  client.h  client_data.h  message_type.h  server.cpp  server.h
src/shaders/: chunk_shader.frag.glsl  chunk_shader.vert.glsl
src/window/: window.cpp  window.h  window_utils.cpp  window_utils.h
src/world/: block.cpp  block.h  chunk.cpp  chunk.h  chunk_generator.cpp  chunk_generator.h  chunk_mesh_generator.cpp  chunk_mesh_generator.h  world.cpp  world.h
